<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>rimac.def</groupId>
	<artifactId>AUTO_DEF_APIVIDA_TEST</artifactId>
	<version>1.0</version>
	<packaging>jar</packaging>

	<name>AUTO_DEF_APIVIDA_TEST</name>
	<url>http://maven.apache.org</url>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<!-- <serenity.version>2.0.39</serenity.version> -->
		<!-- <serenity.maven.version>2.0.39</serenity.maven.version> -->
		<!-- <serenity.cucumber.version>1.9.30</serenity.cucumber.version> -->
		<serenity.version>2.0.81</serenity.version>
		<serenity.maven.version>2.0.48</serenity.maven.version>
		<serenity.cucumber.version>1.9.45</serenity.cucumber.version>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
		<tags></tags>
		<parallel.tests>4</parallel.tests>
		<webdriver.base.url></webdriver.base.url>
		<argLine>-Xmx128m</argLine>
	</properties>

	<!-- Define the Bintray repos for convenience -->
	<repositories>
		<repository>
			<id>rimac-nexus</id>
			<name>maven-public</name>
			<url>http://172.29.113.232:10002/repository/maven-public</url>
		</repository>
		<repository>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
			<id>central</id>
			<name>bintray</name>
			<url>https://jcenter.bintray.com</url>
		</repository>
	</repositories>
	<pluginRepositories>
		<pluginRepository>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
			<id>central</id>
			<name>bintray-plugins</name>
			<url>https://jcenter.bintray.com</url>
		</pluginRepository>
	</pluginRepositories>

	<dependencies>


		<dependency>
			<groupId>rimac.util</groupId>
			<artifactId>auto_util</artifactId>
			<version>1.0</version>
			<scope>system</scope>
			<systemPath>${pom.basedir}/lib/auto_util.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>rimac.api</groupId>
			<artifactId>auto_app_apivida_test</artifactId>
			<version>1.0</version>
			<scope>system</scope>
			<systemPath>${pom.basedir}/lib/auto_app_apivida_test.jar</systemPath>
		</dependency>


		<dependency>
			<groupId>jcifs</groupId>
			<artifactId>jcifs</artifactId>
			<version>1.3.17</version>
		</dependency>
		<dependency>
			<groupId>net.serenity-bdd</groupId>
			<artifactId>serenity-core</artifactId>
			<version>${serenity.version}</version>
		</dependency>
		<dependency>
			<groupId>net.serenity-bdd</groupId>
			<artifactId>serenity-junit</artifactId>
			<version>${serenity.version}</version>
		</dependency>
		<dependency>
			<groupId>net.serenity-bdd</groupId>
			<artifactId>serenity-rest-assured</artifactId>
			<version>${serenity.version}</version>
		</dependency>
		<dependency>
			<groupId>net.serenity-bdd</groupId>
			<artifactId>serenity-cucumber</artifactId>
			<version>${serenity.cucumber.version}</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi</artifactId>
			<version>4.1.0</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->
		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi-ooxml</artifactId>
			<version>4.1.0</version>
		</dependency>
		<dependency>
			<groupId>org.json</groupId>
			<artifactId>json</artifactId>
			<version>20180130</version>
		</dependency>
	</dependencies>

	<profiles>
		<profile>
			<id>Rimac</id>
			<properties>
				<webdriver.driver>chrome</webdriver.driver>
			</properties>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-surefire-plugin</artifactId>
						<version>2.18.1</version>
						<configuration>
							<argLine>-Dfile.encoding=UTF-8</argLine>
							<includes>
								<include>**/**Rimac*.*</include>
							</includes>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.20</version>
				<configuration>
					<argLine>-Dfile.encoding=UTF-8</argLine>
					<useSystemClassLoader>false</useSystemClassLoader>
    				<threadCount>1</threadCount>
					<testFailureIgnore>true</testFailureIgnore>
					<includes>
						<include>**/**Rimac**.java</include>
					</includes>
					<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
					<systemProperties>
						<webdriver.driver>${webdriver.driver}</webdriver.driver>
					</systemProperties>
				</configuration>
			</plugin>

			<plugin>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>2.20</version>
				<configuration>
					<includes>
						<!-- <include>**/**Runner**.java</include> -->
					</includes>
					<systemPropertyVariables>
						<webdriver.base.url>${webdriver.base.url}</webdriver.base.url>
					</systemPropertyVariables>
					<parallel>classes</parallel>
					<threadCount>${parallel.tests}</threadCount>
					<forkCount>${parallel.tests}</forkCount>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>integration-test</goal>
							<goal>verify</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.7.0</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>net.serenity-bdd.maven.plugins</groupId>
				<artifactId>serenity-maven-plugin</artifactId>
				<version>${serenity.maven.version}</version>
				<configuration>
					<tags>${tags}</tags>
				</configuration>
				<executions>
					<execution>
						<id>serenity-reports</id>
						<phase>post-integration-test</phase>
						<goals>
							<goal>aggregate</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>